WIP - Updating thymeleaf templates to new syntax

--- a/src/main/resources/templates/fragments/aboveCard.html
+++ b/src/main/resources/templates/fragments/aboveCard.html
@@ -3,7 +3,7 @@
 <body>
 <div th:fragment="aboveCard" id="aboveCard" class="toolbar">
   <div class="stack-vertical">
-    <div th:replace="fragments/goBack :: goBackLink"></div>
+    <div th:replace="~{fragments/goBack :: goBackLink}"></div>
   </div>
 </div>
 </body>
