--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head" th:assert="${!#strings.isEmpty(title)}">
-  <th:block th:replace="fragments/libraryHead :: headLinks"></th:block>
+  <th:block th:replace="~{fragments/libraryHead :: headLinks}"></th:block>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="format-detection" content="telephone=no">
