--- a/src/main/resources/templates/fragments/inputs/checkboxFieldset.html
+++ b/src/main/resources/templates/fragments/inputs/checkboxFieldset.html
@@ -32,7 +32,7 @@
       <input type="hidden" th:id="${inputName} + 'Hidden'" th:name="${inputName} + '[]'" value="">
       <th:block th:replace="${content}"/>
       <th:block
-          th:replace="fragments/inputError :: validationError(inputName=${inputName})"></th:block>
+          th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
     </fieldset>
   </div>
 </th:block>
