--- a/src/main/resources/templates/fragments/inputs/phone.html
+++ b/src/main/resources/templates/fragments/inputs/phone.html
@@ -28,7 +28,7 @@
             aria-invalid=${hasError}"
            th:value="${inputData.getOrDefault(inputName, '')}">
     <th:block
-        th:replace="fragments/inputError :: validationError(inputName=${inputName})"></th:block>
+        th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
   </div>
 </th:block>
 </body>
