--- a/src/main/resources/templates/fragments/inputs/select.html
+++ b/src/main/resources/templates/fragments/inputs/select.html
@@ -33,7 +33,7 @@
       </select>
     </div>
     <th:block
-        th:replace="fragments/inputError :: validationError(inputName=${inputName})"></th:block>
+        th:replace="~{fragments/inputError :: validationError(inputName=${inputName})}"></th:block>
   </div>
 </th:block>
 </body>
