--- a/src/main/resources/templates/fragments/toolbar.html
+++ b/src/main/resources/templates/fragments/toolbar.html
@@ -14,11 +14,11 @@
         </a>
       </div>
       <div class="toolbar__right">
-        <!--        <select th:replace="fragments/localeSelect :: localeSelect"></select>-->
+        <!--        <select th:replace="~{fragments/localeSelect :: localeSelect}"></select>-->
       </div>
     </div>
     <th:block
-        th:replace="fragments/demoBanner :: demoBanner(demoText=#{demo.banner-text}, profile='demo')"/>
+        th:replace="~{fragments/demoBanner :: demoBanner(demoText=#{demo.banner-text}, profile='demo')}"/>
   </header>
 </th:block>
 </body>
