--- a/src/test/resources/templates/testFlow/contactInfoPreference.html
+++ b/src/test/resources/templates/testFlow/contactInfoPreference.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}">
-<head th:replace="fragments/head :: head(title='contactInfo')"></head>
+<head th:replace="~{fragments/head :: head(title='contactInfo')}"></head>
 <body>
 <div class="page-wrapper">
-  <div th:replace="fragments/toolbar :: toolbar"></div>
+  <div th:replace="~{fragments/toolbar :: toolbar}"></div>
   <section class="slab">
     <div class="grid">
-      <div th:replace="fragments/goBack :: goBackLink"></div>
+      <div th:replace="~{fragments/goBack :: goBackLink}"></div>
       <main id="content" role="main" class="form-card spacing-above-35">
         <th:block
-            th:replace="'fragments/cardHeader' :: cardHeader(header='How to contact')"/>
+            th:replace="~{fragments/cardHeader :: cardHeader(header='How to contact')}"/>
         <th:block
-            th:replace="'fragments/form' :: form(action=${formAction}, content=~{::formContent})">
+            th:replace="~{fragments/form :: form(action=${formAction}, content=~{::formContent})}">
           <th:block th:ref="formContent">
             <div class="form-card__content">
 
               <th:block
-                  th:replace="'fragments/inputs/phone' :: phone(
+                  th:replace="fragments/inputs/phone :: phone(
                   inputName='phoneNumber',
                   label='please enter a phone number')"/>
 
-              <th:block th:replace="'fragments/inputs/text' ::
+              <th:block th:replace="fragments/inputs/text ::
                   text(inputName='email',
                   label='please enter an email address')"/>
 
-              <th:block th:replace="'fragments/inputs/checkboxFieldset' ::
+              <th:block th:replace="fragments/inputs/checkboxFieldset ::
                   checkboxFieldset(inputName='howToContactYou',
                   label='how to contact',
                   content=~{::contactMethods})">
                 <th:block th:ref="contactMethods">
                   <!-- Copy the below input if you want to add more -->
                   <th:block
-                      th:replace="'fragments/inputs/checkboxInSet' :: checkboxInSet(inputName='howToContactYou',value='email', label='contact by email')"/>
+                      th:replace="~{fragments/inputs/checkboxInSet :: checkboxInSet(inputName='howToContactYou',value='email', label='contact by email')}"/>
 
                   <th:block
-                      th:replace="'fragments/inputs/checkboxInSet' :: checkboxInSet(inputName='howToContactYou',value='phone', label='contact by phone')"/>
+                      th:replace="~{fragments/inputs/checkboxInSet :: checkboxInSet(inputName='howToContactYou',value='phone', label='contact by phone')}"/>
                 </th:block>
               </th:block>
 
@@ -49,6 +49,6 @@
     </div>
   </section>
 </div>
-<th:block th:replace="fragments/footer :: footer"/>
+<th:block th:replace="~{fragments/footer :: footer}"/>
 </body>
 </html>
