--- a/src/test/resources/templates/testFlow/test.html
+++ b/src/test/resources/templates/testFlow/test.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}">
-<head th:replace="fragments/head :: head(title='Test')"></head>
-<body >
+<head th:replace="~{fragments/head :: head(title='Test')}"></head>
+<body>
 <div class="page-wrapper">
-  <div th:replace="fragments/toolbar :: toolbar"></div>
+  <div th:replace="~{fragments/toolbar :: toolbar}"></div>
   <section class="slab">
     <div class="grid">
       <main id="content" role="main" class="form-card spacing-above-35">
         <th:block
-            th:replace="'fragments/cardHeader' :: cardHeader(header='Test', subtext='This is the test page!')"/>
-            <div class="form-card__footer">
-              <th:block th:replace="'fragments/continueButton' :: continue" />
-            </div>
+            th:replace="~{fragments/cardHeader :: cardHeader(header='Test', subtext='This is the test page!')}"/>
+        <div class="form-card__footer">
+          <th:block th:replace="~{fragments/continueButton :: continue}"/>
+        </div>
       </main>
     </div>
   </section>
 </div>
-<th:block th:replace="fragments/footer :: footer" />
+<th:block th:replace="~{fragments/footer :: footer}"/>
 </body>
 </html>
