--- a/src/test/resources/templates/uploadFlow/docUploadJourney.html
+++ b/src/test/resources/templates/uploadFlow/docUploadJourney.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}">
-<head th:replace="fragments/head :: head(title='Upload Documents')"></head>
+<head th:replace="~{fragments/head :: head(title='Upload Documents')}"></head>
 <body th:with="dzFormName='uploadTest'">
 <div class="page-wrapper" id="uploadTest">
-  <div th:replace="fragments/toolbar :: toolbar"></div>
+  <div th:replace="~{fragments/toolbar :: toolbar}"></div>
   <section class="slab">
     <div class="grid">
-      <div th:replace="fragments/goBack :: goBackLink"></div>
+      <div th:replace="~{fragments/goBack :: goBackLink}"></div>
       <main id="content" role="main" class="form-card spacing-above-35">
         <th:block
-            th:replace="'fragments/cardHeader' :: cardHeader(header='Upload Documents')"/>
+            th:replace="~{fragments/cardHeader :: cardHeader(header='Upload Documents')}"/>
         <th:block
-            th:replace="'fragments/form' :: form(action=${formAction}, enctype='multipart/form-data', content=~{::contentRef}, formId=${dzFormName})">
+            th:replace="~{fragments/form :: form(action=${formAction}, enctype='multipart/form-data', content=~{::contentRef}, formId=${dzFormName})}">
           <th:block th:ref="contentRef">
             <div class="form-card__content">
               <th:block
-                  th:replace="fragments/fileUploader :: fileUploader(inputName=${dzFormName})"></th:block>
+                  th:replace="~{fragments/fileUploader :: fileUploader(inputName=${dzFormName})}"></th:block>
             </div>
             <div id="submit" class="form-card__footer display-none">
               <th:block th:replace="fragments/inputs/submitButton :: submitButton(
