--- a/src/main/resources/templates/fragments/inputs/date.html
+++ b/src/main/resources/templates/fragments/inputs/date.html
@@ -71,13 +71,13 @@
              th:value="${inputData.getOrDefault(inputName + 'Year', '')}"/>
     </fieldset>
     <th:block
-        th:replace="fragments/inputError :: validationError(inputName=${inputName} + 'Month')"></th:block>
+        th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Month')}"></th:block>
     <th:block
-        th:replace="fragments/inputError :: validationError(inputName=${inputName} + 'Day')"></th:block>
+        th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Day')}"></th:block>
     <th:block
-        th:replace="fragments/inputError :: validationError(inputName=${inputName} + 'Year')"></th:block>
+        th:replace="~{fragments/inputError :: validationError(inputName=${inputName} + 'Year')}"></th:block>
     <th:block
-        th:replace="fragments/inputError :: validationError(inputName=${groupName})"></th:block>
+        th:replace="~{fragments/inputError :: validationError(inputName=${groupName})}"></th:block>
   </div>
 </th:block>
 </body>
