--- a/src/test/resources/templates/testFlow/second.html
+++ b/src/test/resources/templates/testFlow/second.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}">
-<head th:replace="fragments/head :: head(title='Second Page')"></head>
+<head th:replace="~{fragments/head :: head(title='Second Page')}"></head>
 <body >
 <div class="page-wrapper">
-  <div th:replace="fragments/toolbar :: toolbar"></div>
+  <div th:replace="~{fragments/toolbar :: toolbar}"></div>
   <section class="slab">
     <div class="grid">
       <main id="content" role="main" class="form-card spacing-above-35">
         <th:block
-            th:replace="'fragments/cardHeader' :: cardHeader(header='Second Page', subtext='This is the second page!')"/>
+            th:replace="~{fragments/cardHeader :: cardHeader(header='Second Page', subtext='This is the second page!')}"/>
             <div class="form-card__footer">
-              <th:block th:replace="'fragments/continueButton' :: continue" />
+              <th:block th:replace="~{fragments/continueButton :: continue}" />
             </div>
           </th:block>
       </main>
     </div>
   </section>
 </div>
-<th:block th:replace="fragments/footer :: footer" />
+<th:block th:replace="~{fragments/footer :: footer}" />
 </body>
 </html>
