--- a/src/test/resources/templates/testFlow/testAddressValidation.html
+++ b/src/test/resources/templates/testFlow/testAddressValidation.html
@@ -1,8 +1,8 @@
-<th:block th:replace="'fragments/form' :: form(action=${formAction}, content=~{::testAddress})">
+<th:block th:replace="~{fragments/form :: form(action=${formAction}, content=~{::testAddress})}">
   <th:block th:ref="testAddress">
     <div class="form-card__content">
       <th:block
-          th:replace="'fragments/inputs/address' :: address(validate=true, inputName='validationOn')"/>
+          th:replace="~{fragments/inputs/address :: address(validate=true, inputName='validationOn')}"/>
     </div>
   </th:block>
 </th:block>
