Add "iconName" option to screen fragments
These screen fragments are nice, but they lack a key feature: an icon!

This commit simply adds an (optional) iconName argument to add an icon
into the header.

--- a/src/main/resources/templates/fragments/screens/screenWithYesAndNoButtons.html
+++ b/src/main/resources/templates/fragments/screens/screenWithYesAndNoButtons.html
@@ -2,7 +2,8 @@
     th:fragment="screenWithYesAndNoButtons"
     th:with="
       hasHelpText=${!#strings.isEmpty(helpText)},
-      hasAriaDescribe=${!#strings.isEmpty(ariaDescribe)}"
+      hasAriaDescribe=${!#strings.isEmpty(ariaDescribe)},
+      hasIconName=${!#strings.isEmpty(iconName)}"
     th:assert="
       ${!#strings.isEmpty(title)},
       ${!#strings.isEmpty(header)},
@@ -19,6 +20,7 @@
       <div class="grid">
         <div th:replace="fragments/goBack :: goBackLink"></div>
         <main id="content" role="main" class="form-card spacing-above-35">
+          <th:block th:replace="${hasIconName} ? ~{'fragments/icons' :: ${iconName}} : _" />
           <th:block
               th:replace="'fragments/cardHeader' :: cardHeader(header=${header})"/>
           <th:block
